# confgen-core

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile
src/confgen_core/: __init__.py
