[project]
name = "confgen-core"
version = "0.1.0"
description = "Library to define input variables and templates and generate output based on them."
license = "MIT"
readme = "README.md"
authors = [
    { name = "Fedor Suchkov", email = "f.suchkov@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
