[project]
name = "confgen-core"
version = "0.1.0"
description = "Library to define input variables and templates and generate output based on them."
license = "MIT"
readme = "README.md"
authors = [
    { name = "Fedor Suchkov", email = "f.suchkov@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "coverage>=7.6.10",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
]

[tool.isort]
profile = "black"
